     Much of "Repository Editing" is now generated from embedded help.
     repotool mirror can now use rsync for pulling repositories.
     Repair repocutter reduce logic and add a test for it.
     New "branchlift" primitive for use after a --nobranch read.
     In SVN lifts, user .gitignores can be merged with svn:ignore properties.
     In SVN lifts, reduce overloading of the "-root" suffix.

4.21: 2020-11-18::
     Fix for a bug that could scramble history in pathological tag-copy cases.

4.20: 2020-11-16::
     Fixed a bug when an SVN file's content looked exactly like a link special.
     Prevented a crash when "stamp" was given with no selection.
     Various small improvements to documentation.

4.19: 2020-08-30::
     Fix for a bug that produced incorrect splits of mixed Subversion commits.

4.18: 2020-08-26::
     Repocutter now has a "replace" commant for replacing text in blobs.
     repotool now shows closed Mercurial branches.
     The extractor logic creates all resets for multiply-tagged commits.
     Compiler optimizations are enabled for increased performance.

4.17: 2020-08-16::
     Improvements to documentation and bug-reporting guidance.
     Quash a Go 1.15 warning.
     Performance improvement in the hgclient code.
     Builds and passes tests on 32-bit machines.

4.16: 2020-08-03::
     Support property deletions from version 3 dump file format in repocutter.
     Performance of repocutter renumber is greatly improved.
     Add notes on how to support AccuRev.
     The sizeof command is now documemted.

4.15: 2020-07-18::
     Documentation polishing.
     Fix buggy handling of symlinks in the tarball-maker production.
     Fix a stupid bug in the distribution's "make clean".

4.14: 2020-06-27::
     Build fixes for Mac OS X (Darwin).

4.13: 2020-06-24::
     Now interprets and translates svn:global-ignores properties.
     Numerous small improvements to documentation.

4.12: 2020-06-21::