@@ -1,0 +1,4 @@
+## Test strip --obscure
+read <sample1.fi
+strip --obscure
+write -
