@@ -9,6 +9,7 @@ Repository head::
      New "branchlift" primitive for use after a --nobranch read.
      In SVN lifts, user .gitignores can be merged with svn:ignore properties.
      In SVN lifts, reduce overloading of the "-root" suffix.
+     Add --obscure option to reposurgeon strip command, like repocutter.
 
 4.21: 2020-11-18::
      Fix for a bug that could scramble history in pathological tag-copy cases.
